--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
+  "homepage": "https://chlnlto.github.io/valentine-invitation",
   "name": "valentines-day",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mojs/core": "^1.7.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "css-doodle": "^0.38.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.70.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +40,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-react": "^7.23.3",
+    "gh-pages": "^6.1.1"
   }
 }
